--- a/clase_06/regression.ipynb
+++ b/clase_06/regression.ipynb
@@ -3967,7 +3967,7 @@
    "id": "496e0c69",
    "metadata": {},
    "source": [
-    "**Pruebta t-Student**\n",
+    "**Prueba t-Student**\n",
     "\n",
     "Al igual que en el caso simple, los test t-Student para la significancia estadistica de los estimadors $\\beta_j$ es el mismo. \n",
     "\n",
