update clase modelos garch

--- a/clase_08/garch_models.ipynb
+++ b/clase_08/garch_models.ipynb
@@ -241,7 +241,7 @@
     "\n",
     "#### Proceso de Wienner y Movimiento Browniano\n",
     "\n",
-    "Un proceso de **`Wiener`**, también conocido como `Movimiento Browniano`, es un proceso estocástico que describe el comportamiento aleatorio de una partícula en el tiempo.  \n",
+    "Un proceso de **`Wienner`**, también conocido como `Movimiento Browniano`, es un proceso estocástico que describe el comportamiento aleatorio de una partícula en el tiempo.  \n",
     "\n",
     "Formalmente, la definicion es la siguiente: Un proceso de Wienner $W(t)$ es una familia de variables aleatorias que cumplen con las siguientes propiedades:\n",
     "\n",
