--- a/clase_10/supervised_models.ipynb
+++ b/clase_10/supervised_models.ipynb
@@ -47,7 +47,7 @@
    "source": [
     "El `Aprendizaje Automático` o `Machine Learning` es una disciplina del campo de la inteligencia artificial que, a través de algoritmos, dota a los ordenadores la capacidad de identificar patrones en datos masivos y elaborar predicciones mediante análisis predictivo. Este aprendizaje, permite a los computadores realizar tareas específicas de forma autónoma.\n",
     "\n",
-    "<img src=\"./figs/ia_diagrama.png\" width = 400 height = 400 />\n",
+    "<img src=\"figs/ia_diagrama.png\" width = 400 height = 400 />\n",
     "\n",
     "En este contexto, los algoritmos `Machine Learning` se dividen en tres categorías, siendo las dos primeras las más comunes.\n",
     "\n",
@@ -57,7 +57,7 @@
     "\n",
     "3. **`Aprendizaje por Refuerzo`** su objetivo es que un algoritmo aprenda a partir de la propia experiencia. Esto es, que sea capaz de tomar la mejor decisión ante diferentes situaciones de acuerdo a un proceso de prueba y error en el que se recompensan las decisiones correctas\n",
     "\n",
-    "<img src=\"./figs/task_ml.png\" width = 600 height = 420 />\n",
+    "<img src=\"figs/task_ml.png\" width = 600 height = 420 />\n",
     "\n",
     "En cualquier Modelo de Aprendizaje Automático, el `Error de Predicción` puede ser separado en tres términos:\n",
     "\n",
@@ -71,7 +71,7 @@
     "\\mathbb{E}_{x,y,\\mathcal{D}} = \\mathbb{E}_{x,\\mathcal{D}}[(h_{\\mathcal{D}}-\\bar{h}(x))^2] + \\mathbb{E}_{x,y}[(\\bar{y}(x)-y)^2] + \\mathbb{E}_{x}[(\\bar{h}(x) - \\bar{y}(x))^2]\n",
     "$$\n",
     "\n",
-    "<img src=\"./figs/low_bias.png\" width = 800 height = 350 />\n",
+    "<img src=\"figs/low_bias.png\" width = 800 height = 350 />\n",
     "\n",
     "Es muy dificil construir un sólo modelo que obtenga un buen rendimiento (bajo sesgo y varianza), por tanto, en este contexto se procede a construir múltiples modelos `complejos` o `sencillos` con el mismo ó distinto set de datos y combinando sus predicciones. Por tanto, el objetivo es obtener un modelo final que tenga bajo error de sesgo y varianza. Ahora bien, entendamos lo siguiente: \n",
     "\n",
@@ -93,11 +93,11 @@
    "source": [
     "Al momento de construir modelos de machine learning (aprendizaje supervisado o no supervisado), es necesario generar una partición de datos en conjuntos de `train`, `test` y en algunos casos, utilizan un tercer conjunto llamado `validation`. No obstante, para efectos de este curso, utilizaremos particiones  `train` y  `test` en proporciones de 70% y 30%. \n",
     "\n",
-    "<img src=\"./figs/train_test.png\" width = 600 height = 350 />\n",
+    "<img src=\"figs/train_test.png\" width = 600 height = 350 />\n",
     "\n",
     "La idea principal detrás de este mecanismo, es que simula cómo se comportará el modelo con datos que nunca ha visto, lo que ayuda en gran medida a evitar el problema de sobre ajuste u **`overfitting`**.  El concepto de `overfitting` significa que el modelo aprende patrones específicos del conjunto de entrenamiento en lugar de generalizar. En otras palabras, el modelo aprende de memoria patrones específicos de los datos y al momento de someterlo con un conjunto de datos diferentes, no es capaz de reconocerlos. \n",
     "\n",
-    "<img src=\"./figs/overfiting.png\" width = 700 height = 350 />"
+    "<img src=\"figs/overfiting.png\" width = 700 height = 350 />"
    ]
   },
   {
@@ -424,7 +424,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "<img src=\"./figs/rf_tree.jpg\" width = 600 height = 400 />"
+    "<img src=\"figs/rf_tree.jpg\" width = 600 height = 400 />"
    ]
   },
   {
@@ -1083,7 +1083,7 @@
    "source": [
     "`SVR` es una implementacion de regresion que utiliza máquinas de soporte vectorial (`SVM`) para encontar una función que mapea los datos de entrada a un espacio de características de mayor dimensión, permitiendo modelar relaciones no lineales entre las variables predictoras y la variable objetivo.  \n",
     "\n",
-    "<img src=\"./figs/svm_svr.jpeg\" width = 900 height = 300 />"
+    "<img src=\"figs/svm_svr.jpeg\" width = 900 height = 300 />"
    ]
   },
   {
