update latex portfolio optimization

--- a/clase_11/Portfolio_Optimization.ipynb
+++ b/clase_11/Portfolio_Optimization.ipynb
@@ -171,8 +171,8 @@
     "El problema anterior, es cuasi-convexo por lo que puede ser resuelto con programas de programacion convexa como [cvxpy](https://www.cvxpy.org/examples/index.html); sin embargo, puede ser transformado en un problema de programacion cuadratica mediante transformaciones, una de ellas es la de Charnes y Cooper siempre y cuando, se asuma que \n",
     "$\\mu w^{\\top} - r_f > 0$, de esta forma, el problema toma la siguiente forma:\n",
     "\n",
-    "$\n",
-    "\\begin{equation}\n",
+    "\n",
+    "\\begin{equation*}\n",
     "\\begin{aligned}\n",
     "    & \\min_{w} y\\Sigma y^{\\top} \\\\\n",
     "    & \\text{st.} \\\\\n",
@@ -181,8 +181,8 @@
     "    & \\quad k \\geq 0 \\\\\n",
     "    & \\quad y_i \\geq 0\\quad \\forall i\\in\\mathbb{N} \n",
     "\\end{aligned}\n",
-    "\\end{equation}\n",
-    "$\n",
+    "\\end{equation*}\n",
+    "\n",
     "\n",
     "Donde el portfolio óptimo se obtiene al hacer la transformacion $w = y/k$\n",
     "\n",
@@ -191,11 +191,11 @@
     "**`Recordatorio:`** El `Ratio de Sharpe` es una medida que se utiliza para evaluar la relación entre el rendimiento esperado de un portfolio y su riesgo. Se define como la diferencia entre el rendimiento del portfolio y el rendimiento de un activo libre de riesgo, dividido por la desviación estandar de los rendimientos del portfolio. Esto, es útil para comparar el rendimiento ajustado por riesgo de difernetes portfolios o activos. \n",
     "\n",
     "La fórmula es la siguiente : \n",
-    "$\n",
-    "\\begin{equation}\n",
+    "\n",
+    "\\begin{equation*}\n",
     "S = \\frac{\\mu_p - r_f}{\\sigma_p}\n",
-    "\\end{equation}\n",
-    "$\n",
+    "\\end{equation*}\n",
+    "\n",
     "\n",
     "Donde $S$ es el ratio de sharpe, $\\mu_p$ es el rendimiento esperado del portfolio, $r_f$ es el rendimiento del activo libre de riesgo (como bonos del tesoro) y $\\sigma_p$ es la desviación estandar de los rendimientos del portfolio que mide la volatilidad. En un contexto de optimizacion de portfolio, el `Ratio de Sharpe` permite evaluar qué tanto rendimiento adicional genera el portafolio por cada unidad adicional de riesgo asumido. En un contexto de optimización, se utiliza para:\n",
     "\n",
