update var notebook

--- a/clase_12/value_at_risk.ipynb
+++ b/clase_12/value_at_risk.ipynb
@@ -1065,7 +1065,7 @@
     "Pasos a considerar (simulación univariada):\n",
     "\n",
     "1. Obtener los parámetos de $r_t$ sabiendo que estos, $r_t \\sim \\mathcal{N}(\\mu, \\sigma)$ identicamente independientes.\n",
-    "2. Definir el número de simulaciones, y el horizonte de tiempo (básicamente, el esquema de simulación devuelve una matriz de dimensión `horizonte temporal` v/s `n[umero de simulaciones`).\n",
+    "2. Definir el número de simulaciones, y el horizonte de tiempo (básicamente, el esquema de simulación devuelve una matriz de dimensión `horizonte temporal` v/s `número de simulaciones`).\n",
     "3. Simular los valores del portafolio, para ello considerar que calcular el valor del portafolio como $V_t = V_0 \\cdot \\exp{S_t}$. Notar que $S_t$ es la suma acumulada de los retornos diarios simulados del dia 1 a $t$.  \n",
     "4. Calcular el `VaR` utilizando la forma histórica con un nivel de confianza del 95%"
    ]
