agrega funciones de activacion

--- a/clase_13/mlp.ipynb
+++ b/clase_13/mlp.ipynb
@@ -744,7 +744,18 @@
    "id": "c5993ab6",
    "metadata": {},
    "source": [
-    "La figura derecha, es una abstracción del funcionamiento de una red neuronal artificial. En este contexto, es una unidad computacional que recibe entradas o `inputs`, realiza una operación matemática sobre estas (generalmente una combinación lineal mediante `linear function` llamada $z$) y luego aplica una función de activación no lineal (`activation function` $f$) para producir una salida u `output`, esto es lo que se conoce como Perceptrón. Por otro lado, las ponderaciones o pesos llamados $w$ , representan la influencia que una entrada tiene sobre la neurona. En redes biológicas, esto puede asemejarse a la fuerza sináptica que define cuánto influye una neurona sobre otra. \n",
+    "La figura derecha, es una abstracción del funcionamiento de una red neuronal artificial. En este contexto, es una unidad computacional que recibe entradas o `inputs`, realiza una operación matemática sobre estas (generalmente una combinación lineal mediante `linear function` llamada $z$) y luego aplica una función de activación no lineal (`activation function` $f$) para producir una salida u `output`. \n",
+    "\n",
+    "\n",
+    "<tr>\n",
+    "<td><img src = \"activacion.webp\" style=\"width: 1000px;\"/> </td>\n",
+    "</tr>\n",
+    "\n",
+    "<tr>\n",
+    "<td><img src = \"multilayer.png\" style=\"width: 1000px;\"/> </td>\n",
+    "</tr>\n",
+    "\n",
+    "Por otro lado, las ponderaciones o pesos llamados $w$ , representan la influencia que una entrada tiene sobre la neurona. En redes biológicas, esto puede asemejarse a la fuerza sináptica que define cuánto influye una neurona sobre otra. \n",
     "\n",
     "Estas neuronas están organizadas en :\n",
     "\n",
@@ -753,10 +764,6 @@
     "* `Capa de Salida` produce la salida en el modelo\n",
     "\n",
     "* `Capa Oculta` realiza cálculos intermedios para aprender representaciones complejas\n",
-    "\n",
-    "<tr>\n",
-    "<td><img src = \"multilayer.png\" style=\"width: 1000px;\"/> </td>\n",
-    "</tr>\n",
     "\n",
     "Por tanto, del mismo modo en que nuestro cerebro está compuesto por neuronas interconectadas entre sí, una red neuronal artificial esta formada por neuronas artificiales conectadas entre sí y agrupadas en diferentes niveles que denominamos `capas` o `layers`. Basicamente, una capa es un conjunto de neuronas cuyas entradas (`input layers`) provienen de una capa anterior (o de los datos de entrada en el caso de la primera capa) cuyas salidas son la entrada de una capa posterior. En el caso de la imagen, esta es una red neuronal de 5 capas. Una capa de entrada, tres capas ocultas y una capa de salida. "
    ]
